--- a/index.html
+++ b/index.html
@@ -1,67 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with curved sections</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <title>Frontend Mentor | Huddle landing page with curved sections</title>
+    <!-- <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+        
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style> -->
 </head>
+
 <body>
-  Try it free
+    <header class="header">
+        <nav class="navbar">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img aria-hidden="true" src="images/logo.svg" alt="Logo" class="main-logo d-inline-block" width="100px" />
+                </a>
+                <a href="#" class="btn btn-outline-primary rounded-pill px-4">Try It Free</a>
+                <h1 class="text-center p-2 mt-5 lh-base">Build The Community Your Fans Will Love</h1>
+                <p class="lh-base text-center p-2">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+                <a href="#" class="btn btn-primary rounded-pill hud-btn px-5 py-3 mx-auto shadow-lg">Get Started For Free</a>
+                <img aria-hidden="true" src="images/screen-mockups.svg" alt="mock up" class="img-fluid mt-5">
+            </div>
+        </nav>
+    </header>
+    <main class="container">
+        <section class="stats">
+            <div class="container">
+                <div class="stats-item p-5">
+                    <img aria-hidden="true" src="images/icon-communities.svg" alt="community" class="img-thumbnail border-0">
+                    <h2 class="display-5 fw-bold text-center">1.4k+</h2>
+                    <p class="text-center text-muted">communities Formed</p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="stats-item p-5">
+                    <img aria-hidden="true" src="images/icon-messages.svg" alt="message" class="img-thumbnail border-0">
+                    <h2 class="display-5 fw-bold text-center">2.7m+</h2>
+                    <p class="text-center text-muted">Messages Sent</p>
+                </div>
+            </div>
+        </section>
+        <section class="testimoials">
+            <div class="container pt-5 mt-5">
+                <img aria-hidden="true" src="images/illustration-grow-together.svg" alt="grow together" class="img-fluid">
+                <div class="testimonials-text-container">
+                    <h2 class="text-center mt-5 mb-3">Grow Together</h2>
+                    <p class="text-center">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+                </div>
+            </div>
+            <div class="container pt-5 mt-5">
+                <img aria-hidden="true" src="images/illustration-flowing-conversation.svg" alt="flowing conversation" class="img-fluid">
+                <div class="testimonials-text-container">
+                    <h2 class="text-center mt-5 mb-3">Flowing Conversations</h2>
+                    <p class="text-center">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+                </div>
+            </div>
+            <div class="container pt-5 mt-5">
+                <img aria-hidden="true" src="images/illustration-your-users.svg" alt="your User" class="img-fluid">
+                <div class="testimonials-text-container">
+                    <h2 class="text-center mt-5 mb-3">Your Users</h2>
+                    <p class="text-center">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
 
-  Build The Community Your Fans Will Love
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does 
-  your audience. Create connections with your users as you engage in genuine discussion. 
+    </footer>
+    <!--      Ready To Build Your Community? Get Started For Free Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem. Phone: +1-543-123-4567 example@huddle.com
+    Newsletter To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address Subscribe -->
 
-  Get Started For Free
-
-  1.4k+
-  Communities Formed
-
-  2.7m+
-  Messages Sent
-
-  Grow Together
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
-
-  Your Users
-  It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
-  once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
-  vestibulum a, ultrices quis sem.
-  
-  Phone: +1-543-123-4567
-  example@huddle.com
-
-  Newsletter
-  To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-  send you spam or pass on your email address
-
-  Subscribe
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+    <!-- <footer>
+        <p class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+        </p>
+    </footer> -->
 </body>
+
 </html>
