--- a/index.html
+++ b/index.html
@@ -26,67 +26,110 @@
 
 <body>
     <header class="header">
-        <nav class="navbar">
+        <nav class="navbar pt-lg-5 mt-lg-5">
             <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img aria-hidden="true" src="images/logo.svg" alt="Logo" class="main-logo d-inline-block" width="100px" />
-                </a>
-                <a href="#" class="btn btn-outline-primary rounded-pill px-4">Try It Free</a>
-                <h1 class="text-center p-2 mt-5 lh-base">Build The Community Your Fans Will Love</h1>
-                <p class="lh-base text-center p-2">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-                <a href="#" class="btn btn-primary rounded-pill hud-btn px-5 py-3 mx-auto shadow-lg">Get Started For Free</a>
-                <img aria-hidden="true" src="images/screen-mockups.svg" alt="mock up" class="img-fluid mt-5">
+                <img aria-hidden="true" src="images/logo.svg" alt="header Logo" class="main-logo d-inline-block" />
+                <a href="#" class="btn btn-outline-primary rounded-pill px-4 shadow-sm">Try It Free</a>
             </div>
         </nav>
+        <div class="container pt-lg-5 mt-lg-5">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <h1 class="text-center p-2 mt-5 lh-base ">Build The Community Your Fans Will Love</h1>
+                <p class="lh-base text-center p-2 w-lg-1 mx-lg-auto">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.
+                </p>
+                <a href="#" class=" col-lg-12 btn-primary rounded-pill hud-btn px-5 py-3 mx-auto shadow-lg btn-lg-1 py-lg-4">Get
+                    Started
+                    For
+                    Free</a>
+                <img aria-hidden="true" src="images/screen-mockups.svg" alt="mock up" class="header-photo img-fluid mt-5">
+            </div>
+        </div>
     </header>
     <main class="container">
-        <section class="stats">
-            <div class="container">
-                <div class="stats-item p-5">
-                    <img aria-hidden="true" src="images/icon-communities.svg" alt="community" class="img-thumbnail border-0">
-                    <h2 class="display-5 fw-bold text-center">1.4k+</h2>
-                    <p class="text-center text-muted">communities Formed</p>
+        <section class="stats mt-5">
+            <div class="row">
+                <div class="container col-lg-6">
+                    <div class="stats-item p-sm-5 ">
+                        <img aria-hidden="true" src="images/icon-communities.svg" alt="community" class="sudo img-thumbnail border-0 ms-lg-5">
+                        <h2 class="display-5 fw-bold text-center fs-lg-5">1.4k+</h2>
+                        <p class="text-center text-muted">communities Formed</p>
+                    </div>
+                </div>
+                <div class="container col-lg-6">
+                    <div class="stats-item p-sm-5">
+                        <img aria-hidden="true" src="images/icon-messages.svg" alt="message" class="sudo img-thumbnail border-0 ms-lg-5">
+                        <h2 class="display-5 fw-bold text-center fs-lg-5">2.7m+</h2>
+                        <p class="text-center text-muted">Messages Sent</p>
+                    </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="stats-item p-5">
-                    <img aria-hidden="true" src="images/icon-messages.svg" alt="message" class="img-thumbnail border-0">
-                    <h2 class="display-5 fw-bold text-center">2.7m+</h2>
-                    <p class="text-center text-muted">Messages Sent</p>
+            </div>
+        </section>
+        <section class="testimoials mb-5 row">
+            <div class="container d-lg-flex flex-lg-row-reverse pt-5 mt-5">
+                <img aria-hidden="true" src="images/illustration-grow-together.svg" alt="grow together" class="col-lg-6 img-fluid">
+                <div class="testimonials-text-container col-lg-6">
+                    <h2 class="text-sm-center text-lg-start mt-5 mb-3">Grow Together</h2>
+                    <p class="text-sm-center text-lg-start w-lg-2">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
+                    </p>
+                </div>
+            </div>
+            <div class="container d-lg-flex flex-lg-row- pt-5 mt-5 justify-content-end gap-lg-5">
+                <img aria-hidden="true" src="images/illustration-flowing-conversation.svg" alt="flowing conversation" class="col-lg-6 img-fluid">
+                <div class="testimonials-text-container col-lg-6">
+                    <h2 class="text-sm-center text-lg-start mt-5 mb-3">Flowing Conversations</h2>
+                    <p class="text-sm-center text-lg-start w-lg-2">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+                </div>
+            </div>
+            <div class="container d-lg-flex flex-lg-row-reverse pt-5 mt-5">
+                <img aria-hidden="true" src="images/illustration-your-users.svg" alt="your User" class="col-lg-6 img-fluid">
+                <div class="testimonials-text-container col-lg-6">
+                    <h2 class="text-sm-center text-lg-start mt-5 mb-3">Your Users</h2>
+                    <p class="text-sm-center text-lg-start w-lg-2">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
                 </div>
             </div>
         </section>
-        <section class="testimoials">
-            <div class="container pt-5 mt-5">
-                <img aria-hidden="true" src="images/illustration-grow-together.svg" alt="grow together" class="img-fluid">
-                <div class="testimonials-text-container">
-                    <h2 class="text-center mt-5 mb-3">Grow Together</h2>
-                    <p class="text-center">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
-                </div>
-            </div>
-            <div class="container pt-5 mt-5">
-                <img aria-hidden="true" src="images/illustration-flowing-conversation.svg" alt="flowing conversation" class="img-fluid">
-                <div class="testimonials-text-container">
-                    <h2 class="text-center mt-5 mb-3">Flowing Conversations</h2>
-                    <p class="text-center">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
-                </div>
-            </div>
-            <div class="container pt-5 mt-5">
-                <img aria-hidden="true" src="images/illustration-your-users.svg" alt="your User" class="img-fluid">
-                <div class="testimonials-text-container">
-                    <h2 class="text-center mt-5 mb-3">Your Users</h2>
-                    <p class="text-center">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
-                </div>
+        <section class="ready-to-build mt-5">
+            <div class="container mt-5 pt-5 d-flex flex-column">
+                <h1 class="text-center mb-3">Ready To Build Your Community?</h1>
+                <a href="#" class="mt-4 mb-5 btn btn-primary rounded-pill hud-btn px-5 py-3 mx-auto shadow-lg">Get
+                    Started For
+                    Free</a>
             </div>
         </section>
     </main>
-    <footer>
-
-
+    <div class="footer-top-bg mt-5 py-5"></div>
+    <footer class="overflow-hidden">
+        <div class="container pt-5 mt-lg-5">
+            <div class="row d-lg-flex flex-lg-wrap ">
+                <div class="col-lg-5 order-lg-3">
+                    <p class="display-6 fw-bold">NEWSLETTER</p>
+                    <p class="lh-base w-lg-2">To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
+                    <form action="#">
+                        <div class="d-flex flex-column pb-5 mb-5 form-sm">
+                            <input aria-label="Email for subscribtion" type="email" id="mail" class="rounded-3 px-2 py-2 mb-3">
+                            <button type="submit" class="btn hud-btn rounded-3 btn-primary align-self-end">Subscribe</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-lg-4 order-2"></div>
+                <div class="col-lg-3 order-1">
+                    <img src="images/footer-logo.svg" alt="footer logo" aria-hidden="true" class="img-fluid" width="200px">
+                    <p class="mt-4 pe-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.</p>
+                    <ul class="info d-flex flex-column justify-content-center mb-5">
+                        <li class="mb-3"><img src="images/icon-phone.svg" alt="Phone" class="me-3"> Phone: +1-543-123-4567
+                        </li>
+                        <li class=""><img src="images/icon-email.svg" alt="Phone" class="me-3">example@huddle.com</li>
+                    </ul>
+                    <ul class="social-container d-flex flex-row justify-content-between ">
+                        <li class="social-item mb-4"><img src="images/facebook-square.svg" alt=""></li>
+                        <li class="social-item mb-4"><img src="images/instagram.svg" alt=""></li>
+                        <li class="social-item mb-4"><img src="images/twitter-square.svg" alt=""></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
-    <!--      Ready To Build Your Community? Get Started For Free Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem. Phone: +1-543-123-4567 example@huddle.com
-    Newsletter To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address Subscribe -->
-
     <!-- <footer>
         <p class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
